Successfully deployed files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       p {
         font-size: 2em;
         display: flex;
-        color: #666;
+        color: #ca0a0a;
       }
 
       .course {
@@ -46,13 +46,13 @@
       .courseNum {
         margin: 0.25em;
         font-size: 3em;
-        color: #da9512;
+        color: #032eee;
       }
 
       .small {
         display: none;
         font-size: 30vw;
-        color: #f3cf8c;
+        color: #f7a204;
       }
 
       @keyframes fly-in {
