added hearts for my wife

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<header>Hello</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emma Bake</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3e6fa;
+            color: #4a2c6f;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #d6b0f2;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #4a2c6f;
+            font-size: 3em;
+            margin: 0;
+        }
+        .heart {
+            margin-top: 20px;
+            display: block;
+            width: 50px;
+            height: 50px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Emma Bake</h1>
+        <img src="https://img.icons8.com/ios-filled/50/4a2c6f/like--v1.png" alt="Heart" class="heart">
+    </header>
+</body>
+</html>
