--- a/index.html
+++ b/index.html
@@ -3,37 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma Bake</title>
+    <title>Placeholder Layout with Plus Button</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f3e6fa;
-            color: #4a2c6f;
+            background-color: #f3f4f6;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
+
         header {
-            background-color: #d6b0f2;
+            background-color: #4a90e2;
+            padding: 15px;
+            text-align: right;
+        }
+
+        .login-btn {
+            background-color: #ffffff;
+            border: 2px solid #4a90e2;
+            color: #4a90e2;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .container {
             padding: 20px;
+        }
+
+        h2 {
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background-color: #e1e1e1;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            color: #333;
+        }
+
+        .add-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 60px;
+            height: 60px;
+            background-color: #4a90e2;
+            border: none;
+            border-radius: 50%;
+            color: white;
+            font-size: 30px;
             text-align: center;
+            line-height: 60px;
+            cursor: pointer;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            color: #4a2c6f;
-            font-size: 3em;
-            margin: 0;
-        }
-        .heart {
-            margin-top: 20px;
-            display: block;
-            width: 50px;
-            height: 50px;
+
+        /* Hover effect for plus button */
+        .add-button:hover {
+            background-color: #357ab7;
         }
     </style>
 </head>
 <body>
+
+    <!-- Header with Login Button -->
     <header>
-        <h1>Emma Bake</h1>
-        <img src="https://img.icons8.com/ios-filled/50/4a2c6f/like--v1.png" alt="Heart" class="heart">
+        <button class="login-btn">Login</button>
     </header>
+
+    <!-- Container for Dates and Times -->
+    <div class="container">
+        <h2>Upcoming Events</h2>
+        <ul>
+            <li>October 1, 2024 - 10:00 AM</li>
+            <li>October 5, 2024 - 2:30 PM</li>
+            <li>October 10, 2024 - 9:00 AM</li>
+            <li>October 15, 2024 - 1:45 PM</li>
+            <li>October 20, 2024 - 11:15 AM</li>
+        </ul>
+    </div>
+
+    <!-- Plus Button in Bottom Right -->
+    <button class="add-button">+</button>
+
 </body>
 </html>
