--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Header with Login Button -->
     <header>
-        <button class="login-btn">Login</button>
+        <button href="login.html">Login</button>
     </header>
 
     <!-- Month Switcher -->
