--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 1000px;
+        }
+        .github-btn {
+            background-color: #ffffff;
+            border: 2px solid #050505;
+            color: #029011;
+            padding: 10px 25px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 1000px;
         }
 
         .container {
@@ -95,14 +104,18 @@
         .add-button:hover {
             background-color: #357ab7;
         }
+        img {
+            width: 50%; /* Make the image take up the full width of the page */
+            height: 50%; /* Maintain aspect ratio */
+        }
     </style>
 </head>
-<img src="haloimage.webp">
-<body>
 
+<body>
     <!-- Header with Login Button -->
     <header>
-        <button href="login.html">Login</button>
+        <a href="login.html" class="login-btn">Login</a>
+        <a href="https://github.com/JaredBake/startup" class="github-btn">GitHub</a>
     </header>
 
     <!-- Month Switcher -->
@@ -188,7 +201,8 @@
 
         // Initial display
         updateMonth();
+        
     </script>
-
+    <img src="haloimage.webp">
 </body>
 </html>
