--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         .container {
             padding: 20px;
         }
+        h1{
+            color:#0b0bd7
+        }
 
         h2 {
             color: #333;
@@ -114,9 +117,12 @@
 <body>
     <!-- Header with Login Button -->
     <header>
-        <a href="login.html" class="login-btn">Login</a>
-        <a href="https://github.com/JaredBake/startup" class="github-btn">GitHub</a>
+        <div class="button-container">
+            <a href="login.html" class="login-btn">Login</a>
+            <a href="https://github.com/JaredBake/startup" class="github-btn">GitHub</a>
+        </div>
     </header>
+    <h1>Jared Bake</h1>
 
     <!-- Month Switcher -->
     <div class="month-switcher">
