--- a/login.html
+++ b/login.html
@@ -1,1 +1,44 @@
-Username and Password
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f4f6;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            text-align: center;
+        }
+
+        header {
+            color: #f3f4f6;
+        }
+
+        .username-label, .password-label {
+            background-color: #4a90e2;
+            border: 1px solid #03011f;
+            color: #080908;
+            padding: 10px 15px;
+            font-size: 16px;
+            border-radius: 10px;
+            align-items: center;
+        }
+        
+    </style>
+
+    
+</head>
+<body>
+    <h1>
+        <div>
+        <label class="username-label">Username:</label>
+        <input type="text" id="textbox" name="Username">
+        <label class="password-label">Password:</label>
+        <input type="text" id="textbox" name="Password">
+        </div>
+    </h1>
+</body>
