--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f3f4f6;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -15,30 +15,70 @@
         }
 
         header {
-            color: #f3f4f6;
+            color: #aa0000;
+            padding: 20px;
         }
 
         .username-label, .password-label {
-            background-color: #4a90e2;
+            background-color: #030303;
             border: 1px solid #03011f;
-            color: #080908;
-            padding: 10px 15px;
+            color: #ffffff;
+            padding: 5px 15px;
             font-size: 16px;
             border-radius: 10px;
             align-items: center;
         }
+
+        .home-btn {
+            background-color: #ffffff;
+            border: 2px solid #46020b;
+            color: #bc0019;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 100px;
+            text-align: right;
+        }
+
+        .links {
+            text-align: right;
+            background-color: #a20000;
+            border: #ffffff;
+            padding: 20px;
+            align-self: auto;
+        }
+
+        .form-container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            width: 300px;
+        }
+        img {
+            max-width: 200%;
+
+        }
         
     </style>
+    <header><div class="links"><a href="index.html" class="home-btn">HomePage</a></div></header>
 
-    
 </head>
 <body>
-    <h1>
-        <div>
+    <div class="form-container">
+        <form id="login-form">
         <label class="username-label">Username:</label>
         <input type="text" id="textbox" name="Username">
         <label class="password-label">Password:</label>
         <input type="text" id="textbox" name="Password">
-        </div>
-    </h1>
+        </form>
+    </div>
+    <div>
+        <img src="valhiem.jpg">
+    </div>
 </body>
