CSS done mostly

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
             font-size: 2em;
             cursor: pointer;
             user-select: none;
-            position: fixed;
+            position: absolute;
         }
 
         .left-arrow {
-            left: 725px;
+            left: 30%;
         }
 
         .right-arrow {
-            right: 725px;
+            right: 30%;
         }
 
         .month-display {
@@ -141,11 +141,12 @@
             <a href="https://github.com/JaredBake/startup" class="github-btn">GitHub</a>
         </div>
     </header>
-    <h1>Jared Bake</h1>
-    <div>September 28, 2024</div>
+    
 </head>
 
 <body>
+    <h1>Jared Bake</h1>
+    <div>September 28, 2024</div>
     <!-- Month Switcher -->
     <div class="month-switcher">
         <span class="arrow left-arrow" id="prev-month">&#8592;</span> <!-- Left Arrow -->
