--- a/login.html
+++ b/login.html
@@ -15,12 +15,11 @@
         }
 
         header {
-            color: #aa0000;
-            padding: 20px;
+            flex: 0 80px;
         }
 
         .username-label, .password-label {
-            background-color: #030303;
+            background-color: #999999;
             border: 1px solid #03011f;
             color: #ffffff;
             padding: 5px 15px;
@@ -31,8 +30,8 @@
 
         .home-btn {
             background-color: #ffffff;
-            border: 2px solid #46020b;
-            color: #bc0019;
+            border: 2px solid #000793;
+            color: #030096;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
@@ -42,16 +41,15 @@
 
         .links {
             text-align: right;
-            background-color: #a20000;
+            background-color: #000000;
             border: #ffffff;
             padding: 20px;
             align-self: auto;
         }
 
         .form-container {
-            background-color: white;
+            background-color: #4a90e2;
             padding: 30px;
-            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
