--- a/login/login.html
+++ b/login/login.html
@@ -64,7 +64,7 @@
         }
         
     </style>
-    <header><div class="links"><a href="index.html" class="home-btn">HomePage</a></div></header>
+    <header><div class="links"><a href="../index.html" class="home-btn">HomePage</a></div></header>
 
 </head>
 <body>
@@ -77,6 +77,6 @@
         </form>
     </div>
     <div>
-        <img src="valhiem.jpg">
+        <img src="../valhiem.jpg">
     </div>
 </body>
